# asset-search-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2021-10-26-102200_initial/: down.sql  up.sql
migrations/2022-04-21-140849_add_assets_index_on_uid/: down.sql  up.sql
migrations/2022-04-26-115926_asset_label_from_state/: down.sql  up.sql
migrations/2022-06-02-141357_bu_tickers/: down.sql  up.sql
migrations/2023-03-07-094309_asset_names_descr/: down.sql  up.sql
migrations/2023-11-17-143159_external_tickers/: down.sql  up.sql
migrations/2023-12-06-123700_make_ticker_name_descr_nullable/: down.sql  up.sql
src/lib/: async_redis.rs  error.rs  lib.rs  models.rs  schema.rs  sync_redis.rs  waves.rs
src/lib/admin/: mod.rs  server.rs
src/lib/api/: dtos.rs  mod.rs  models.rs  server.rs
src/lib/api_clients/: error.rs  images.rs  mod.rs
src/lib/cache/: async_redis.rs  async_redis_cache.rs  dtos.rs  invalidator.rs  mod.rs  redis.rs  sync_redis.rs  sync_redis_cache.rs
src/lib/config/: admin.rs  api.rs  app.rs  cache.rs  consumer.rs  migration.rs  mod.rs  postgres.rs  redis.rs
src/lib/consumer/: mod.rs  updates.rs
src/lib/consumer/models/: asset.rs  asset_descriptions.rs  asset_labels.rs  asset_names.rs  asset_tickers.rs  asset_tickers_ext.rs  block_microblock.rs  data_entry.rs  issuer_balance.rs  mod.rs  out_leasing.rs
src/lib/consumer/repo/: mod.rs  pg.rs
src/lib/db/: enums.rs  mod.rs
src/lib/services/: mod.rs
src/lib/services/admin_assets/: mod.rs
src/lib/services/admin_assets/repo/: mod.rs  pg.rs
src/lib/services/assets/: entities.rs  mod.rs
src/lib/services/assets/dtos/: mod.rs  search_request.rs
src/lib/services/assets/repo/: mod.rs  pg.rs
src/lib/services/images/: dummy.rs  http.rs  mod.rs
