[package]
edition = "2021"
name = "asset-search-rs"
version = "2.3.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
bb8 = { git = "https://github.com/Barre/bb8", branch = "multiplexed-connections" }
bb8-redis = { git = "https://github.com/Barre/bb8", branch = "multiplexed-connections", features = ["multiplexed-connections"] }
bigdecimal = { version = "0.4", features = ["serde"] }
blake2 = "0.10"
bs58 = "0.5"
bytes = "1.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", default-features = false, features = ["chrono", "postgres", "r2d2"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
diesel_migrations = "1.4"
envy = "0.4"
fragstrings = { git = "https://github.com/waves-exchange/fragstrings", tag = "v0.2.0", default-features = false, features = ["parse"] }
futures = "0.3"
itertools = "0.12"
lazy_static = "1.4"
percent-encoding = "2.1"
r2d2 = "0.8"
redis = { version = "0.21", features = ["tokio", "r2d2"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = { version = "0.12", features = ["warp"] }
serde_repr = "0.1"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16", features = ["derive"] }
warp = { version = "0.3", default-features = false }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.4.3-1" }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.9" }

[lib]
name = "app_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "invalidate_cache"
path = "src/bin/invalidate_cache.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"
